fix terminal scrollbars

--- a/styles/terminal.less
+++ b/styles/terminal.less
@@ -7,14 +7,11 @@ ink-terminal, .ink-terminal {
   background-color: @syntax-background-color;
   color: @syntax-text-color;
 
-  canvas {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    top: auto;
-  }
+  .terminal.xterm {
+    height: 100%;
 
-  .xterm-viewport {
-    background-color: @syntax-background-color !important;
+    .xterm-viewport {
+      background-color: @syntax-background-color !important;
+    }
   }
 }
